chore: move helm repo to S3/CDN

--- a/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
+++ b/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
@@ -36,6 +36,9 @@ spec:
                 secretKeyRef: 
                   name: kubezero-backup-restic
                   key: password 
+            {{- with .Values.clusterBackup.extraEnv }}
+              {{- toYaml . | nindent 12 }}
+            {{- end }}
             #securityContext:
             # readOnlyRootFilesystem: true
           hostNetwork: true
