--- a/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/Chart.yaml
@@ -22,5 +22,5 @@ dependencies:
     # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   - name: kubezero-lib
     version: ">= 0.1.3"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
 kubeVersion: ">= 1.18.0"
