--- a/charts/kubezero-istio/Chart.yaml
+++ b/charts/kubezero-istio/Chart.yaml
@@ -14,7 +14,7 @@ maintainers:
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
   - name: base
     version: 1.11.3
   - name: istio-discovery
