--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -17,7 +17,7 @@ maintainers:
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
   - name: eck-operator
     version: 1.6.0
     # repository: https://helm.elastic.co
