--- a/charts/kubezero-metrics/Chart.yaml
+++ b/charts/kubezero-metrics/Chart.yaml
@@ -15,7 +15,7 @@ maintainers:
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
   - name: kube-prometheus-stack
     version: 18.1.0
     # Switch back to upstream once all alerts are fixed eg. etcd gpcr
