--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -149,7 +149,7 @@ kube-prometheus-stack:
         enabled: true
       dashboards:
         min_refresh_interval: "30s"
-        default_home_dashboard_path: '/tmp/dashboards/home.json'
+        default_home_dashboard_path: '/tmp/dashboards/KubeZero/home.json'
       alerting:
         enabled: false
       date_formats:
@@ -196,6 +196,14 @@ kube-prometheus-stack:
   # Todo
   alertmanager:
     enabled: false
+    config:
+      global:
+        resolve_timeout: 5m
+      route:
+        group_by: ['severity', 'clusterName']
+        group_wait: 30s
+        group_interval: 5m
+        repeat_interval: 6h
     alertmanagerSpec:
       # externalUrl:
       logFormat: json
