--- a/charts/kubezero-mq/Chart.yaml
+++ b/charts/kubezero-mq/Chart.yaml
@@ -14,7 +14,7 @@ maintainers:
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
   - name: nats
     version: 0.8.4
     #repository: https://nats-io.github.io/k8s/helm/charts/
