--- a/charts/kubezero-redis/Chart.yaml
+++ b/charts/kubezero-redis/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-redis
 description: KubeZero Umbrella Chart for Redis HA
 type: application
-version: 0.3.4
+version: 0.3.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -13,13 +13,13 @@ maintainers:
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
-    repository: https://zero-down-time.github.io/kubezero/
+    repository: https://cdn.zero-downtime.net/charts/
   - name: redis
-    version: 14.8.8
+    version: 15.5.4
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
   - name: redis-cluster
-    version: 6.2.7
+    version: 6.3.9
     repository: https://charts.bitnami.com/bitnami
     condition: redis-cluster.enabled
 
