chore: sync commit ... storage WIP !

--- a/charts/kubezero-storage/Chart.yaml
+++ b/charts/kubezero-storage/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-storage
 description: KubeZero umbrella chart for all things storage incl. backup, eg. openEBS-lvm, gemini
 type: application
-version: 0.3.2
+version: 0.4.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -14,11 +14,19 @@ maintainers:
   - name: Quarky9
 dependencies:
   - name: lvm-localpv
-    version: 0.8.2
+    version: 0.8.5
     condition: lvm-localpv.enabled
     # repository: https://openebs.github.io/lvm-localpv
   - name: gemini
     version: 0.0.7
     condition: gemini.enabled
     # repository: https://charts.fairwinds.com/stable
+  - name: aws-ebs-csi-driver
+    version: 2.3.0
+    condition: aws-ebs-csi-driver.enabled
+    # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
+  - name: aws-efs-csi-driver
+    version: 2.1.5
+    condition: aws-efs-csi-driver.enabled
+    # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
 kubeVersion: ">= 1.18.0"
