--- a/charts/kubezero-network/charts/calico/templates/calico.yaml
+++ b/charts/kubezero-network/charts/calico/templates/calico.yaml
@@ -596,7 +596,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: linux
-        node-role.kubernetes.io/master: ""
+        node-role.kubernetes.io/control-plane: ""
       tolerations:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
