--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -16,7 +16,7 @@ istio-discovery:
 
     # Not implemented, monkey patched in the chart itself
     nodeSelector:
-      node-role.kubernetes.io/master: ""
+      node-role.kubernetes.io/control-plane: ""
     tolerations:
     - effect: NoSchedule
       key: node-role.kubernetes.io/master
