--- a/charts/kubezero-cert-manager/Chart.yaml
+++ b/charts/kubezero-cert-manager/Chart.yaml
@@ -2,21 +2,22 @@ apiVersion: v2
 name: kubezero-cert-manager
 description: KubeZero Umbrella Chart for cert-manager
 type: application
-version: 0.7.3
-appVersion: 1.5.3
+version: 0.8.0
+appVersion: 1.6.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - cert-manager
 maintainers:
-
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.3"
+    version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: cert-manager
-    version: 1.5.3
+    version: 1.6.1
     condition: cert-manager.enabled
     repository: https://charts.jetstack.io
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
