--- a/charts/kubezero-istio-ingress/Chart.yaml
+++ b/charts/kubezero-istio-ingress/Chart.yaml
@@ -2,23 +2,25 @@ apiVersion: v2
 name: kubezero-istio-ingress
 description: KubeZero Umbrella Chart for Istio based Ingress
 type: application
-version: 0.7.5
-appVersion: 1.11.3
+version: 0.7.6
+appVersion: 1.11.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - istio
+  - ingress
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: istio-ingress
-    version: 1.11.3
+    version: 1.11.5
     condition: istio-ingress.enabled
   - name: istio-private-ingress
-    version: 1.11.3
+    version: 1.11.5
     condition: istio-private-ingress.enabled
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
