--- a/charts/kubezero-istio/Chart.yaml
+++ b/charts/kubezero-istio/Chart.yaml
@@ -2,25 +2,26 @@ apiVersion: v2
 name: kubezero-istio
 description: KubeZero Umbrella Chart for Istio
 type: application
-version: 0.7.5
-appVersion: 1.11.3
+version: 0.7.6
+appVersion: 1.11.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - istio
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: base
-    version: 1.11.3
+    version: 1.11.5
   - name: istio-discovery
-    version: 1.11.3
+    version: 1.11.5
   - name: kiali-server
     version: 1.38.1
     # repository: https://github.com/kiali/helm-charts/tree/master/docs
     condition: kiali-server.enabled
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
