--- a/containers/admin/v1.21/kubeadm/values.yaml
+++ b/containers/admin/v1.21/kubeadm/values.yaml
@@ -9,7 +9,7 @@ listenAddress: 0.0.0.0
 api:
   endpoint: kube-api.changeme.org:6443
   listenPort: 6443
-  allEtcdEndpoints: ""
+  etcdServers: "https://localhost:2379"
   extraArgs: {}
   # -- https://s3.${REGION}.amazonaws.com/${CFN[ConfigBucket]}/k8s/$CLUSTERNAME
   serviceAccountIssuer: ""
@@ -47,7 +47,8 @@ network:
 highAvailable: false
 
 etcd:
-  nodeName: set_via_cmdline
+  nodeName: etcd
+  state: new
   extraArgs: {}
 
 # -- Set to false for openrc, eg. on Gentoo or Alpine
