feat: Remove TC, add Jenkins to CI, bugfixes for 1.21

--- a/charts/kubezero-addons/templates/cluster-backup/secret.yaml
+++ b/charts/kubezero-addons/templates/cluster-backup/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.clusterBackup.enabled }}
+{{- if and .Values.clusterBackup.enabled .Values.clusterBackup.repository }}
 apiVersion: v1
 kind: Secret
 metadata:
