--- a/charts/kubezero/templates/addons.yaml
+++ b/charts/kubezero/templates/addons.yaml
@@ -1,7 +1,22 @@
 {{- define "addons-values" }}
 
-{{- with index .Values "addons" "metallb" }}
-metallb:
+{{- with .Values.addons.clusterBackup }}
+clusterBackup:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+
+{{- with index .Values "addons" "aws-node-termination-handler" }}
+aws-node-termination-handler:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+
+{{- with .Values.addons.fuseDevicePlugin }}
+fuseDevicePlugin:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+
+{{- with .Values.addons.k8sEcrLoginRenew }}
+k8sEcrLoginRenew:
   {{- toYaml . | nindent 2 }}
 {{- end }}
 
