--- a/charts/kubezero-network/templates/multus/daemonset.yaml
+++ b/charts/kubezero-network/templates/multus/daemonset.yaml
@@ -113,6 +113,7 @@ spec:
         args:
         - "--multus-conf-file=auto"
         - "--cni-version=0.3.1"
+        - "--cni-bin-dir=/host/usr/libexec/cni"
         resources:
           requests:
             cpu: "100m"
@@ -122,38 +123,28 @@ spec:
             memory: "50Mi"
         securityContext:
           privileged: true
+          capabilities:
+            add: ["SYS_ADMIN"]
         volumeMounts:
+        - name: run
+          mountPath: /run
         - name: cni
           mountPath: /host/etc/cni/net.d
         - name: cnibin
-          mountPath: /host/opt/cni/bin
+          mountPath: /host/usr/libexec/cni
         - name: multus-cfg
           mountPath: /tmp/multus-conf
-      initContainers:
-        - name: install-multus-binary
-          image: ghcr.io/k8snetworkplumbingwg/multus-cni:{{ .Values.multus.tag }}
-          command:
-            - "cp"
-            - "/usr/src/multus-cni/bin/multus"
-            - "/host/opt/cni/bin/multus"
-          resources:
-            requests:
-              cpu: "10m"
-              memory: "15Mi"
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - name: cnibin
-              mountPath: /host/opt/cni/bin
-              mountPropagation: Bidirectional
       terminationGracePeriodSeconds: 10
       volumes:
+        - name: run
+          hostPath:
+            path: /run
         - name: cni
           hostPath:
             path: /etc/cni/net.d
         - name: cnibin
           hostPath:
-            path: /opt/cni/bin
+            path: /usr/libexec/cni
         - name: multus-cfg
           configMap:
             name: multus-cni-config
