--- a/charts/kubezero-argocd/Chart.yaml
+++ b/charts/kubezero-argocd/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: KubeZero ArgoCD Helm chart to install ArgoCD itself and the KubeZero ArgoCD Application
 name: kubezero-argocd
-version: 0.9.0
+version: 0.9.2
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -9,16 +9,17 @@ keywords:
   - argocd
   - gitops
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: argo-cd
-    version: 3.27.1
+    version: 3.29.5
     repository: https://argoproj.github.io/argo-helm
   - name: argocd-applicationset
     version: 1.4.0
     repository: https://argoproj.github.io/argo-helm
     condition: argocd-applicationset.enabled
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
