feat: add snapshotController to storage, adapt lvm/ebs accordingly

--- a/charts/kubezero-storage/Chart.yaml
+++ b/charts/kubezero-storage/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-storage
 description: KubeZero umbrella chart for all things storage incl. AWS EBS/EFS, openEBS-lvm, gemini
 type: application
-version: 0.4.3
+version: 0.5.2
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -20,15 +20,15 @@ dependencies:
     version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: lvm-localpv
-    version: 0.8.5
+    version: 0.8.6
     condition: lvm-localpv.enabled
-    repository: https://openebs.github.io/lvm-localpv
+    # repository: https://openebs.github.io/lvm-localpv
   - name: gemini
     version: 0.0.8
     condition: gemini.enabled
     # repository: https://charts.fairwinds.com/stable
   - name: aws-ebs-csi-driver
-    version: 2.5.1
+    version: 2.6.2
     condition: aws-ebs-csi-driver.enabled
     # repository: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
   - name: aws-efs-csi-driver
