--- a/charts/kubezero-storage/templates/lvm/storageclass.yaml
+++ b/charts/kubezero-storage/templates/lvm/storageclass.yaml
@@ -3,6 +3,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: openebs-lvm
+  labels:
+    {{- include "kubezero-lib.labels" . | nindent 4 }}
   {{- if index .Values "lvm-localpv" "storageClass" "default" }}
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
