--- a/charts/kubezero-ci/templates/gitea/secrets.yaml
+++ b/charts/kubezero-ci/templates/gitea/secrets.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.gitea.enabled .Values.gitea.demo }}
+{{- if and .Values.gitea.enabled .Values.gitea.gitea.demo }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -7,6 +7,6 @@ metadata:
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 data:
-  username: {{ "admin" | b64enc | quote }}
+  username: {{ "demo" | b64enc | quote }}
   password: {{ "secret" | b64enc | quote }}
 {{- end }}
