--- a/charts/kubezero-ci/Chart.yaml
+++ b/charts/kubezero-ci/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-ci
 description: KubeZero umbrella chart for all things CI
 type: application
-version: 0.3.0
+version: 0.4.20
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -15,19 +15,23 @@ maintainers:
     email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.4"
+    version: ">= 0.1.5"
     repository: https://cdn.zero-downtime.net/charts/
   - name: gocd
     version: 1.39.4
     repository: https://gocd.github.io/helm-chart
     condition: gocd.enabled
   - name: gitea
-    version: 4.1.1
+    version: 5.0.0
     repository: https://dl.gitea.io/charts/
     condition: gitea.enabled
   - name: jenkins
-    version: 3.9.4
+    version: 3.10.3
     repository: https://charts.jenkins.io
     condition: jenkins.enabled
+  - name: trivy
+    version: 0.4.9
+    repository: https://aquasecurity.github.io/helm-charts/
+    condition: trivy.enabled
 
 kubeVersion: ">= 1.20.0"
