--- a/charts/kubezero-lib/Chart.yaml
+++ b/charts/kubezero-lib/Chart.yaml
@@ -2,11 +2,12 @@ apiVersion: v2
 name: kubezero-lib
 description: KubeZero helm library - common helm functions and blocks
 type: library
-version: 0.1.4
+version: 0.1.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
 maintainers:
-  - name: Quarky9
-kubeVersion: ">= 1.18.0"
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
+kubeVersion: ">= 1.20.0"
