--- a/charts/kubezero-metrics/templates/istio-authorization-policy.yaml
+++ b/charts/kubezero-metrics/templates/istio-authorization-policy.yaml
@@ -18,9 +18,13 @@ spec:
     - source:
         notIpBlocks:
         {{- toYaml $service.ipBlocks | nindent 8 }}
+    to:
+    - operation:
+        hosts: ["{{ $service.url }}"]
     when:
     - key: connection.sni
-      values: ["{{ $service.url }}"]
+      values:
+      - '*'
 ---
 {{- end }}
 {{- end }}
