--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/kube-state-metrics/templates/role.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/kube-state-metrics/templates/role.yaml
@@ -9,16 +9,7 @@ kind: ClusterRole
 {{- end }}
 metadata:
   labels:
-    app.kubernetes.io/name: {{ template "kube-state-metrics.name" $ }}
-    app.kubernetes.io/instance: {{ $.Release.Name }}
-    app.kubernetes.io/component: metrics
-    app.kubernetes.io/managed-by: {{ $.Release.Service }}
-    app.kubernetes.io/version: "{{ $.Chart.Version }}"
-    app.kubernetes.io/part-of: {{ template "kube-state-metrics.name" $ }}
-    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version }}
-    {{- if $.Values.customLabels }}
-    {{ toYaml $.Values.customLabels | nindent 4 }}
-    {{- end }}
+    {{- include "kube-state-metrics.labels" $ | indent 4 }}
   name: {{ template "kube-state-metrics.fullname" $ }}
 {{- if eq $.Values.rbac.useClusterRole false }}
   namespace: {{ . }}
