--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/Chart.yaml
@@ -6,20 +6,20 @@ annotations:
       url: https://github.com/prometheus-operator/kube-prometheus
   artifacthub.io/operator: "true"
 apiVersion: v2
-appVersion: 0.52.0
+appVersion: 0.53.1
 dependencies:
 - condition: kubeStateMetrics.enabled
   name: kube-state-metrics
   repository: https://prometheus-community.github.io/helm-charts
-  version: 4.1.*
+  version: 4.4.*
 - condition: nodeExporter.enabled
   name: prometheus-node-exporter
   repository: https://prometheus-community.github.io/helm-charts
-  version: 2.2.*
+  version: 2.5.*
 - condition: grafana.enabled
   name: grafana
   repository: https://grafana.github.io/helm-charts
-  version: 6.18.*
+  version: 6.21.*
 description: kube-prometheus-stack collects Kubernetes manifests, Grafana dashboards,
   and Prometheus rules combined with documentation and scripts to provide easy to
   operate end-to-end Kubernetes cluster monitoring with Prometheus using the Prometheus
@@ -32,7 +32,11 @@ keywords:
 - kube-prometheus
 kubeVersion: '>=1.16.0-0'
 maintainers:
+- email: andrew@quadcorps.co.uk
+  name: andrewgkew
 - name: bismarck
+- email: cedric@desaintmartin.fr
+  name: desaintmartin
 - email: gianrubio@gmail.com
   name: gianrubio
 - email: github.gkarthiks@gmail.com
@@ -46,4 +50,4 @@ sources:
 - https://github.com/prometheus-community/helm-charts
 - https://github.com/prometheus-operator/kube-prometheus
 type: application
-version: 23.1.5
+version: 30.2.0
