--- a/charts/kubezero-logging/charts/fluentd/templates/deployment.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/deployment.yaml
@@ -21,6 +21,9 @@ spec:
   selector:
     matchLabels:
       {{- include "fluentd.selectorLabels" . | nindent 6 }}
+  {{- with .Values.minReadySeconds }}
+  minReadySeconds: {{ . }}
+  {{- end }}
   template:
     metadata:
       annotations:
