--- a/charts/kubezero-logging/charts/fluent-bit/Chart.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/Chart.yaml
@@ -1,9 +1,9 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Update Fluent Bit image to v1.8.9."
+      description: "Update fluent-bit image to 1.8.12."
 apiVersion: v1
-appVersion: 1.8.9
+appVersion: 1.8.12
 description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD
   family operating systems.
 home: https://fluentbit.io/
@@ -19,7 +19,9 @@ maintainers:
   name: naseemkullah
 - email: towmeykaw@gmail.com
   name: Towmeykaw
+- email: steve.hipwell@gmail.com
+  name: stevehipwell
 name: fluent-bit
 sources:
 - https://github.com/fluent/fluent-bit/
-version: 0.19.2
+version: 0.19.18
