--- a/charts/kubezero-logging/charts/fluent-bit/templates/configmap-dashboards.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/configmap-dashboards.yaml
@@ -5,6 +5,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "fluent-bit.fullname" $ }}-dashboard-{{ trimSuffix ".json" (base $path) }}
+  {{- with $.Values.dashboards.namespace }}
+  namespace: {{ . }}
+  {{- end }}
   {{- with $.Values.dashboards.annotations }}
   annotations:
     {{- toYaml . | nindent 4 -}}
