--- a/charts/kubezero-logging/charts/fluent-bit/templates/configmap.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/configmap.yaml
@@ -15,6 +15,6 @@ data:
     {{- (tpl .Values.config.outputs $)  | nindent 4 }}
   {{- range $key, $val := .Values.config.extraFiles }}
   {{ $key }}: |
-    {{- $val | nindent 4 }}
+    {{- (tpl $val $) | nindent 4 }}
   {{- end }}
 {{- end -}}
