--- a/charts/kubezero-logging/charts/fluent-bit/values.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/values.yaml
@@ -82,13 +82,31 @@ serviceMonitor:
 #   namespace: monitoring
 #   interval: 10s
 #   scrapeTimeout: 10s
+#   jobLabel: fluentbit
 #   selector:
 #    prometheus: my-prometheus
+#  ## metric relabel configs to apply to samples before ingestion.
+#  ##
+#  metricRelabelings:
+#    - sourceLabels: [__meta_kubernetes_service_label_cluster]
+#      targetLabel: cluster
+#      regex: (.*)
+#      replacement: ${1}
+#      action: replace
+#  ## relabel configs to apply to samples after ingestion.
+#  ##
+#  relabelings:
+#    - sourceLabels: [__meta_kubernetes_pod_node_name]
+#      separator: ;
+#      regex: ^(.*)$
+#      targetLabel: nodename
+#      replacement: $1
+#      action: replace
 
 prometheusRule:
   enabled: false
 #   namespace: ""
-#   additionnalLabels: {}
+#   additionalLabels: {}
 #   rules:
 #   - alert: NoOutputBytesProcessed
 #     expr: rate(fluentbit_output_proc_bytes_total[5m]) == 0
@@ -105,6 +123,12 @@ dashboards:
   enabled: false
   labelKey: grafana_dashboard
   annotations: {}
+  namespace: ""
+
+lifecycle: {}
+  # preStop:
+  #   exec:
+  #     command: ["/bin/sh", "-c", "sleep 20"]
 
 livenessProbe:
   httpGet:
@@ -124,6 +148,57 @@ resources: {}
 #     cpu: 100m
 #     memory: 128Mi
 
+## only available if kind is Deployment
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts: []
+  # - host: fluent-bit.example.tld
+  extraHosts: []
+  # - host: fluent-bit-extra.example.tld
+      ## specify extraPort number
+  #   port: 5170
+  tls: []
+  #  - secretName: fluent-bit-example-tld
+  #    hosts:
+  #      - fluent-bit.example.tld
+
+## only available if kind is Deployment
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 75
+#  targetMemoryUtilizationPercentage: 75
+   ## see https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/#autoscaling-on-multiple-metrics-and-custom-metrics
+  customRules: []
+#     - type: Pods
+#       pods:
+#         metric:
+#           name: packets-per-second
+#         target:
+#           type: AverageValue
+#           averageValue: 1k
+    ## see https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
+  behavior: {}
+#      scaleDown:
+#        policies:
+#          - type: Pods
+#            value: 4
+#            periodSeconds: 60
+#          - type: Percent
+#            value: 10
+#            periodSeconds: 60
+
+## only available if kind is Deployment
+podDisruptionBudget:
+  enabled: false
+  annotations: {}
+  maxUnavailable: "30%"
+
 nodeSelector: {}
 
 tolerations: []
@@ -141,6 +216,17 @@ podLabels: {}
 priorityClassName: ""
 
 env: []
+#  - name: FOO
+#    value: "bar"
+
+# The envWithTpl array below has the same usage as "env", but is using the tpl function to support templatable string.
+# This can be useful when you want to pass dynamic values to the Chart using the helm argument "--set <variable>=<value>"
+# https://helm.sh/docs/howto/charts_tips_and_tricks/#using-the-tpl-function
+envWithTpl: []
+#  - name: FOO_2
+#    value: "{{ .Values.foo2 }}"
+#
+# foo2: bar2
 
 envFrom: []
 
@@ -148,6 +234,8 @@ extraContainers: []
 #   - name: do-something
 #     image: busybox
 #     command: ['do', 'something']
+
+metricsPort: 2020
 
 extraPorts: []
 #   - port: 5170
@@ -186,7 +274,7 @@ config:
         Parsers_File custom_parsers.conf
         HTTP_Server On
         HTTP_Listen 0.0.0.0
-        HTTP_Port {{ .Values.service.port }}
+        HTTP_Port {{ .Values.metricsPort }}
         Health_Check On
 
   ## https://docs.fluentbit.io/manual/pipeline/inputs
