--- a/charts/kubezero-logging/charts/fluentd/values.yaml
+++ b/charts/kubezero-logging/charts/fluentd/values.yaml
@@ -49,7 +49,14 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-# Configure the livessProbe
+# Configure the livecycle
+# Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
+lifecycle: {}
+  # preStop:
+  #   exec:
+  #     command: ["/bin/sh", "-c", "sleep 20"]
+
+# Configure the livenessProbe
 # Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
@@ -140,6 +147,14 @@ podAnnotations: {}
 ##
 podLabels: {}
 
+## How long (in seconds) a pods needs to be stable before progressing the deployment
+##
+minReadySeconds:
+
+## How long (in seconds) a pod may take to exit (useful with lifecycle hooks to ensure lb deregistration is done)
+##
+terminationGracePeriodSeconds:
+
 ## Deployment strategy / DaemonSet updateStrategy
 ##
 updateStrategy: {}
@@ -150,7 +165,7 @@ updateStrategy: {}
 ## Additional environment variables to set for fluentd pods
 env:
 - name: "FLUENTD_CONF"
-  value: "../../etc/fluent/fluent.conf"
+  value: "../../../etc/fluent/fluent.conf"
   # - name: FLUENT_ELASTICSEARCH_HOST
   #   value: "elasticsearch-master"
   # - name: FLUENT_ELASTICSEARCH_PORT
