--- a/charts/kubezero-addons/charts/aws-node-termination-handler/Chart.yaml
+++ b/charts/kubezero-addons/charts/aws-node-termination-handler/Chart.yaml
@@ -1,21 +1,25 @@
-apiVersion: v1
+apiVersion: v2
+name: aws-node-termination-handler
+description: A Helm chart for the AWS Node Termination Handler.
+type: application
+version: 0.16.0
 appVersion: 1.14.0
-description: A Helm chart for the AWS Node Termination Handler
+kubeVersion: ">= 1.16-0"
+keywords:
+  - aws
+  - eks
+  - ec2
+  - node-termination
+  - spot
 home: https://github.com/aws/eks-charts
 icon: https://raw.githubusercontent.com/aws/eks-charts/master/docs/logo/aws.png
-keywords:
-- eks
-- ec2
-- node-termination
-- spot
-maintainers:
-- email: bwagner5@users.noreply.github.com
-  name: Brandon Wagner
-  url: https://github.com/bwagner5
-- email: jillmon@users.noreply.github.com
-  name: Jillian Montalvo
-  url: https://github.com/jillmon
-name: aws-node-termination-handler
 sources:
-- https://github.com/aws/eks-charts
-version: 0.16.0
+  - https://github.com/aws/aws-node-termination-handler/
+  - https://github.com/aws/eks-charts/
+maintainers:
+  - name: Brandon Wagner
+    url: https://github.com/bwagner5
+    email: bwagner5@users.noreply.github.com
+  - name: Jillian Montalvo
+    url: https://github.com/jillmon
+    email: jillmon@users.noreply.github.com
