chore: reduce forseti log level

--- a/charts/kubezero-addons/templates/forseti/deployment.yaml
+++ b/charts/kubezero-addons/templates/forseti/deployment.yaml
@@ -23,9 +23,9 @@ spec:
         args:
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=:8080
-        - --zap-log-level=2
+        #- --zap-log-level=2
         #- --dry-run
-        # - --leader-elect
+        #- --leader-elect
         command:
         - /forseti
         env:
