--- a/charts/kubezero-storage/charts/gemini/Chart.yaml
+++ b/charts/kubezero-storage/charts/gemini/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-appVersion: 0.1.0
+appVersion: "1.0"
 description: Automated backup and restore of PersistentVolumes using the VolumeSnapshot
   API
 maintainers:
 - email: robertb@fairwinds.com
   name: rbren
 name: gemini
-version: 0.0.8
+version: 1.0.0
