--- a/charts/kubezero-logging/charts/fluent-bit/values.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/values.yaml
@@ -7,7 +7,7 @@ kind: DaemonSet
 replicaCount: 1
 
 image:
-  repository: fluent/fluent-bit
+  repository: cr.fluentbit.io/fluent/fluent-bit
   # Overrides the image tag whose default is {{ .Chart.AppVersion }}
   tag: ""
   pullPolicy: Always
@@ -235,6 +235,8 @@ extraContainers: []
 #     image: busybox
 #     command: ['do', 'something']
 
+flush: 1
+
 metricsPort: 2020
 
 extraPorts: []
@@ -268,7 +270,7 @@ config:
   service: |
     [SERVICE]
         Daemon Off
-        Flush 1
+        Flush {{ .Values.flush }}
         Log_Level {{ .Values.logLevel }}
         Parsers_File parsers.conf
         Parsers_File custom_parsers.conf
