--- a/charts/kubezero-logging/charts/fluentd/templates/podsecuritypolicy.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/podsecuritypolicy.yaml
@@ -21,6 +21,9 @@ spec:
     - 'configMap'
     - 'secret'
     - 'hostPath'
+    {{- if .Values.persistence.enabled }}
+    - 'persistentVolumeClaim'
+    {{- end }}
   runAsUser:
     rule: 'RunAsAny'    
   seLinux:
