--- a/charts/kubezero-logging/charts/fluentd/templates/service.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/service.yaml
@@ -11,6 +11,12 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
+  {{- if .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+  {{- end }}
+  {{- if .Values.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+  {{- end }}
   ports:
   - port: 24231
     targetPort: metrics
