--- a/charts/kubezero-logging/charts/fluentd/values.yaml
+++ b/charts/kubezero-logging/charts/fluentd/values.yaml
@@ -214,6 +214,8 @@ persistence:
 service:
   type: "ClusterIP"
   annotations: {}
+  # loadBalancerIP:
+  # externalTrafficPolicy: Local
   ports: []
   # - name: "forwarder"
   #   protocol: TCP
