--- a/charts/kubeadm/templates/ClusterConfiguration.yaml
+++ b/charts/kubeadm/templates/ClusterConfiguration.yaml
@@ -1,4 +1,4 @@
-apiVersion: kubeadm.k8s.io/v1beta2
+apiVersion: kubeadm.k8s.io/v1beta3
 kind: ClusterConfiguration
 kubernetesVersion: {{ .Chart.Version }}
 clusterName: {{ .Values.clusterName }}
@@ -7,6 +7,8 @@ networking:
   podSubnet: 10.244.0.0/16
 etcd:
   local:
+    # As 3.5 is not recommended stick with 3.4.13 till 1.23
+    imageTag: 3.4.13-0
     extraArgs:
       ### DNS discovery
       #discovery-srv: {{ .Values.domain }}
