--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -20,16 +20,16 @@ featureGates: {{ include "kubeadm.featuregates" ( dict "return" "map" ) }}
 # Minimal unit is 50m per pod
 podsPerCore: 20
 # cpuCFSQuotaPeriod: 10ms
-# Basic OS on Ubuntu 20.04 incl. crio
+# Basic OS incl. crio
 systemReserved:
-  memory: 256Mi
-  ephemeral-storage: "2Gi"
+  memory: 96Mi
+  #ephemeral-storage: "1Gi"
 # kubelet memory should be static as runc,conmon are added to each pod's cgroup
 kubeReserved:
   cpu: 70m
-  memory: 128Mi
+  memory: 96Mi
 # Lets use below to reserve memory for system processes as kubeReserved/sytemReserved doesnt go well with systemd it seems
 #evictionHard:
 #  memory.available: "484Mi"
 imageGCLowThresholdPercent: 70
-kernelMemcgNotification: true
+# kernelMemcgNotification: true
